--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wedding Invitation - Vijay & Spandana</title> <!-- Google Fonts -->
+  <title>Wedding Invitation - Spandana & Vijay</title> <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto:wght@400;700&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -311,27 +311,27 @@ html, body {
       <p style="text-align: center; font-size: 1.2em;">
         <span style="font-family: 'Cursive', 'Brush Script MT', serif; color: #4B0082;">We</span>
         <span style="font-size: 1.5em; font-weight: bold; padding: 5px 15px; border: 2px solid gold; display: inline-block; margin-left: 5px;">
-          NAGARAJU & SUDHARANI
+          Kedari Babu & Aparna
         </span>
       </p> 
       <br>
     </div>
 
     <div class="cordially">
-      <p>cordially invite you to join us in celebrating the marriage of our son</p>
+      <p>cordially invite you to join us in celebrating the marriage of our Daughter</p>
     </div>
 
     <!-- Groom & Bride -->
     <div class="weds-line">
       <p style="font-family: 'Great Vibes', cursive; font-size: 2em; text-align:center; margin:10px 0;">
-        <span class="groom">Vijay</span>
+        <span class="groom">Spandana</span>
         <span class="heart-arrow">Weds</span>
-        <span class="bride">Spandana</span>
+        <span class="bride">Vijay</span>
       </p>
     </div>
 
     <div class="bride-parents">
-      <p class="bride-info">"Loving daughter of Kedari Babu & Aparna"</p>
+      <p class="bride-info">"Loving son of Nagara Raju & Sudharani"</p>
     </div>
 
     <div class="Solemnized">
