--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ html, body {
     <!-- QR Code -->
     <div class="qr-container">
       <a href="https://maps.app.goo.gl/DSpiBzkcf1Er19zXA" target="_blank">
-        <img class="qr" src="https://github.com/Vijay-bheemala/vijay-spandana-marriage-invitation/blob/main/Where%20the%20Magic%20Happens.png" alt="Scan QR for Venue">
+        <img class="qr" src="https://vijay-bheemala.github.io/vijay-spandana-marriage-invitation/Where%20the%20Magic%20Happens.png" alt="Scan QR for Venue">
       </a>
     </div>
 
